[project]
name = "support-ticket-env"
version = "0.1.0"
description = "Support ticket OpenEnv environment"
authors = [{ name = "LSDIVYA" }]
requires-python = ">=3.11"

dependencies = [
    "openai>=1.14.0",
    "pydantic>=2.6.0",
    "openenv>=0.1.13"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["support_ticket_env", "server"]
